# textworkspace

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LEAD.md  LICENSE  README.md  pipeline.yaml  pyproject.toml
docs/: CACHE.md  CONVENTIONS.md  CONVENTIONS.yaml  E2E-CHECKLIST.md  FORUMS-AGENT-SPEC.md  IDEAS-FORMAT.md  IDEAS.yaml  MAP.yaml  PASSTHROUGH.md  PLAN-pins-decisions.md  PROMPT-playbook-format-diagram.md  PROMPT-playbook-format.md  REFACTORS.md  SPEC-TEMPLATE.yaml  SPECS-FORMAT.md  SPECS.yaml  TESTING.md  audit.yaml
prompts/: 001-project-skeleton.yaml  002-config-model.yaml  003-binary-bootstrap.yaml  004-tool-integrations.yaml  005-combo-engine.yaml  006-combo-sharing.yaml  007-init-doctor.yaml  008-fish-shell.yaml  009-readme-release.yaml  010-workspace-profiles.yaml  011-repo-move.yaml  012-repo-import-and-autocomplete.yaml  013-textserve-textread-integration.yaml  014-textforums-search.yaml  015-textforums-tag-suggestions.yaml  016-textforums-links.yaml  017-textforums-bulk-close.yaml  018-textforums-doctor-age.yaml  019-textforums-edit-entry.yaml  020-tw-doctor-old-threads.yaml  201-workspace-config-model.yaml  202-workspace-manager.yaml  203-workspace-cli.yaml
reports/: 001-project-skeleton.report.md  002-config-model.report.md  003-binary-bootstrap.report.md  004-tool-integrations.report.md  005-combo-engine.report.md  006-combo-sharing.report.md  007-init-doctor.report.md  008-fish-shell.report.md  009-readme-release.report.md  014-textforums-search.report.md  015-textforums-tag-suggestions.report.md  016-textforums-links.report.md  (+6 more)
(+51 files in other folders)
